# BurntBeats

./: ..replit.4214485508~  .env.example  .gitignore  .replit  README.md  build-client.js  build-server.js  ci-cd-comprehensive-report.json  ci-cd-fix.cjs  comprehensive-audit.cjs  comprehensive-ci-fix.cjs  deploy-config.json  deploy-fix.cjs  deploy-production-fix.cjs  deploy-production.js  deployment-config.json  deployment-fix-script.js  deployment-fix.js  deployment-status.md  deployment-summary.md  direct-server-start.cjs  format-check.cjs  frontend-implementation-status.md  functionality-summary.md  functionality-test-results.json  google-cloud-credentials.json  health-check-results.json  integration-check.cjs  jest.config.cjs  jest.config.js  main.py  package-fixed.json  package-lock.json  package-scripts.js  package.json  package.json.backup  persistent-server.cjs  production-deploy.js  production-server.cjs  pyproject.toml  (+30 more)
Retrieval-based-Voice-Conversion-WebUI/: unlock_index.py
attached_assets/: API_Key_Validator_middleware_1750987084994.txt  Pasted--Error-Handling-and-Logging-Centralized-Error-Handling-Consider-creating-a-centralized-error-hand-1750850187353_1750850187355.txt  Pasted--type-service-account-project-id-aqueous-thought-464214-j3-private-key-id-daf5d-1751191447540_1751191447542.txt  Pasted--workspace-npm-run-db-migrate-rest-express-1-0-0-db-migrate-tsx-server-migrate-ts-Ru-1750818218593_1750818218594.txt  Pasted--workspace-npm-run-test-unit-rest-express-1-0-0-test-unit-jest-tests-unit-Validation--1750695050500_1750695050501.txt  (+28 more)
client/: index.html
(+248 files in other folders)
